Fix styling bugs
This fixes 4 known styling bugs:
1) Tag color does not blend well making it very hard to see. Change it so it blends.
2) Fix RecentChanges icon fill
3) Fix text color for user bio (for when we turn that feature back on)
4) Fix text coloring bug on other datatables besides allmessages one

--- a/resources/extensions/SocialProfile/profilebio.less
+++ b/resources/extensions/SocialProfile/profilebio.less
@@ -6,5 +6,5 @@
     margin-top: -1em;
     word-break: break-word;
     display: flex;
-    color: #fff;
+    color: @alt-font-color;
 }
